--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 	<title>Test Slider</title>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
- 	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
- 	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
- 	<link rel="favicon" href="favicon.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="favicon" href="favicon.ico">
 
-
-    <link rel="stylesheet"  href="css/styles.css">
-
+	<link rel="stylesheet"  href="css/styles.css">
 
 </head>
 <body>
@@ -64,7 +62,7 @@
 		<div class="ba-slider-navigation">
 
 			<img class="ba-slide" src="images/1.jpg" alt="Slide1">
-			<img class="ba-slide" src="images/2.jpg" alt="Slide2">
+            <img class="ba-slide" src="images/2.jpg" alt="Slide2">
 			<img class="ba-slide" src="images/3.jpg" alt="Slide3">
 			<img class="ba-slide" src="images/4.jpg" alt="Slide4">
 			<img class="ba-slide" src="images/5.jpg" alt="Slide5">
@@ -103,7 +101,7 @@
 	
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKniIfHQAcuPxG1bzb4K5nx4mfxMNmcyM"></script>
 	<script src="https://use.fontawesome.com/340c3a547c.js"></script>
 	<script src="scripts/main.js"></script>
